[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liq-core"
version = "0.1.0"
description = "Core data models and type definitions for the LIQ Stack"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Latent Infinity", email = "dev@latentinfinity.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.120",
    "ruff>=0.14",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/Latent-Infinity/liq-core"
Repository = "https://github.com/Latent-Infinity/liq-core"

[tool.hatch.build.targets.wheel]
packages = ["src/liq"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["liq"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=liq.core --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/liq/core"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
